bizinikiwi/pezframe/support/test/tests/construct_runtime_ui/empty_pezpallet_path.stderr
error: expected one of: `crate`, `self`, `super`, identifier
  --> tests/construct_runtime_ui/empty_pezpallet_path.rs:23:11
   |
23 |         system: ,
   |                 ^
